--- a/src/app/comun/developer-tool/developer-tool.component.html
+++ b/src/app/comun/developer-tool/developer-tool.component.html
@@ -1,8 +1,7 @@
 
 <div *ngIf="mostrarDeveloperTool" id="PantallaDeveloperTool" [style.opacity]="opacidad">
 	<div class="contenedorDeveloperTool">
-		<div class="titulo">Developer Tool</div>
-		<div class="mensajeTexto Texto2">Developer Tool</div>
+		<div class="mensajeTexto Texto2">Abriendo Developer Tool</div>
 		<div class="mensajeOpcion Texto2" (click)="cerrarDeveloperTool()">OK</div>	
 	</div>
 </div>
