--- a/src/app/comun/desarrollador/desarrollador.component.sass
+++ b/src/app/comun/desarrollador/desarrollador.component.sass
@@ -233,6 +233,9 @@
     .botonAccion:hover
       color: black
       background-color: white
+    .seleccionado
+      color: black
+      background-color: white
   .contenedorArchivos
     position: absolute
     top: 20%
@@ -263,6 +266,9 @@
       color: black
       background-color: white
 
+    .seleccionado
+      color: black
+      background-color: white
 
   .contenedorOpcion
     position: absolute
@@ -270,20 +276,196 @@
     left: 25%
     width: 50%
     height: 60%
-    background-color: white
+    
     &.ver
       width: 70%
       height: 70%
       overflow: scroll
+      background-color: white
     &.modificar
       width: 70%
       height: 70%
       overflow: scroll
+      background-color: white
+
     &.subir
-      .botonCambiarEstadisticas
+     
+      #botonSubirExcel
+        position: absolute
+        display: none
+
+      .titulo
+        position: absolute
+        top: 10%
+        width: 100%
+        text-align: center
+        color: white
+
+      label
+        position: absolute
+        top: 20%
+        left: 50%
+        margin-left: -25%
+        width: 50%
+        height: 50%
+        background-color: rgba(0,0,0, 0.7)
+        border: solid white 1px
+        border-radius: 10px
+        color: white
+        .iconoSubir
+          position: absolute
+          width: 35%
+          top: 10%
+          margin-left: -17.5%
+          left: 50%
+          filter: invert(100)
+        .textoBotonSubirExcel
+          position: absolute
+          width: 100%
+          bottom: 5px
+          text-align: center
+
+      label:hover
+        background-color: rgba(255,255,255, 0.7)
+        border: solid black 1px
+        .iconoSubir
+          filter: invert(0)
+        .textoBotonSubirExcel
+          color: black
+
+      .pantallaInfo
         position: relative
-        border: solid black 2px
-      
+        height: 100%
+
+        .contenedorInfoDatos
+          position: relative
+          width: 100%
+          height: 70%
+          background-color: rgba(0,0,0, 0.2)
+          border-radius: 15px
+          color: white
+
+          .icono
+            position: absolute
+            top: 20%
+            width: 20%
+            left: 5%
+
+          .contenedorVerificacion
+            position: absolute
+            width: 70%
+            height: 30%
+            left: 30%
+            top: 30%
+            .contenedorInfoVerificacion
+              position: absolute
+              height: 100%
+              .iconoVerificado
+                position: relative
+                display: inline-block
+                height: 100%
+                filter: invert(100)
+              .textoVerificacion
+                position: absolute
+                display: inline-flex
+                vertical-align: top
+                text-align: center
+                align-items: center
+                width: 35%
+                height: 100%
+            .botonVerificar
+              position: absolute
+              display: inline-flex
+              align-items: center
+              width: 50%
+              height: 100%
+              right: 0
+              text-align: center
+              border: solid white 2px
+            .botonVerificar:hover
+              background-color: white
+              border: solid black 2px
+              color: black
+
+          .titulo
+            position: absolute
+            width: 100%
+            top: 10%
+            text-align: center
+
+          .botonCerrar
+            position: absolute
+            width: 5%
+            top: 2%
+            right: 2%
+          .botonCerrar:hover
+            filter: invert(100)
+
+          .botonCambiarEstadisticas
+            position: absolute
+            width: 50%
+            margin-left: -25%
+            left: 50%
+            text-align: center
+            bottom: 10%
+            border: solid white 2px
+
+          .botonCambiarEstadisticas:hover
+            background-color: white
+            border: solid black 2px
+            color: black
+
+      .pantallaSubido
+        position: relative
+        height: 100%
+
+        .contenedorSubido
+          position: absolute
+          width: 60%
+          height: 80%
+          left: 50%
+          margin-left: -30%
+          background-color: rgba(0,0,0, 0.2)
+          border-radius: 15px
+          color: white
+
+          .icono
+            position: absolute
+            top: 40%
+            width: 15%
+            left: 50%
+            margin-left: -7.5%
+            filter: invert(100)
+          .titulo
+            position: absolute
+            width: 100%
+            top: 20%
+            text-align: center
+
+          .botonCerrar
+            position: absolute
+            width: 10%
+            top: 2%
+            right: 2%
+
+          .botonCerrar:hover
+            filter: invert(100)
+
+          .botonVolver
+            position: absolute
+            width: 50%
+            margin-left: -25%
+            left: 50%
+            text-align: center
+            bottom: 10%
+            border: solid white 2px
+
+          .botonVolver:hover
+            background-color: white
+            border: solid black 2px
+            color: black
+
+
 // *************************************************
 //     PANEL ASSETS
 // *************************************************
@@ -356,6 +538,18 @@
     height: 85%
     left: 2%
     top: 10%
+
+  ul 
+    margin: 0
+
+  .contenedorMensajes
+    position: relative
+    width: 100%
+    height: 80%
+    font-size: 15px
+    padding-bottom: 0
+    overflow-y: scroll
+    overflow-x: hidden
 
 
 //ANIMACIONE:
