Visualización Crear personaje
Página  visual de creación de personaje sin conexión con base de datos

--- a/src/app/comun/heroesInfo/heroesInfo.component.html
+++ b/src/app/comun/heroesInfo/heroesInfo.component.html
@@ -10,7 +10,7 @@
   <img class="fondoPanel" src="assets/heroesInfo/Fondo.png">
   <img class="bordeSuperior" src="assets/heroesInfo/BarraBorde.png">
   <img class="bordeInferior" src="assets/heroesInfo/BarraBorde.png">
-  <img class="botonCerrar" src="assets/heroesInfo/BotonCerrar.png" (click)="heroesInfoService.mostrarHeroesInfo=false">
+  <img class="botonCerrar" src="assets/heroesInfo/BotonCerrar.png" (click)="heroesInfoService.mostrarHeroesInfo=false; panelSeleccionado='personaje';">
 
   <!-- Panel Izquierdo -->
 
