--- a/src/app/comun/heroes/heroes.component.html
+++ b/src/app/comun/heroes/heroes.component.html
@@ -27,16 +27,26 @@
   <div *ngIf="pantalla=='seleccionHeroe'" class="contenedorHeroes">
     <div *ngFor="let heroe of appService.perfil.heroes; let i = index" class="PanelHeroes" (click)="seleccionarHeroe(i);">
       <div class="panelPartidaImagen Texto2">
-        <img src="./assets/Clases/{{heroe.clase.charAt(0)+ heroe.clase.toLowerCase().slice(1)}}.png" class= "ImagenPersonaje" alt="Imagen-Personaje"/>
+        <img src="../../assets/Clases/{{heroe.clase.toLowerCase()}}.png" class= "ImagenPersonaje" alt="Imagen-Personaje"/>
       </div>
       <div class="panelPartidaDescripcion">
         <div class="panelPartidaNombre Texto2">{{heroe.nombre}}</div>
         <div class="panelPartidaPersonaje Texto3">{{heroe.clase}}</div>
       </div>
     </div>
+    <div id="PanelCrearHeroe" class="PanelHeroes" (click)="crearHeroe();">
+      <div class="panelPartidaImagen Texto2">
+        <img src="../../assets/General/Simbolo_Mas.svg" class= "ImagenPersonaje" alt="Imagen-Mas"/>
+      </div>
+      <div class="panelPartidaDescripcion">
+        <div class="panelPartidaNombre Texto2">Crear Personaje</div>
+        <div class="panelPartidaPersonaje Texto3">Nuevo Personaje</div>
+      </div>
+    </div>
   </div>
 
   <appHeroesInfo></appHeroesInfo>
+  <appHeroesCrear></appHeroesCrear>
 
 </div>
  
