--- a/src/app/comun/heroes/heroes.component.sass
+++ b/src/app/comun/heroes/heroes.component.sass
@@ -65,7 +65,7 @@
 
 .PanelHeroes
   position: relative
-  width: 100%
+  width: 98%
   height: 25%
   margin-bottom: 10px
   margin-left: -5px
@@ -93,6 +93,14 @@
   height: 100%
   z-index: 7
 
+  .ImagenMas
+  position: absolute
+  width: 100%
+  height: 90%
+  top: 5%
+  opacity: 0.8
+  z-index: 7
+
 
 .panelPartidaDescripcion
   display: inline-block
@@ -115,6 +123,25 @@
   height: 50%
 
    
+/* Scrollbar */
+::-webkit-scrollbar 
+  position: absolute
+  width: 6%
 
+  /* Handle */
+::-webkit-scrollbar-button
+  height: 14%
+  background: url("../../../assets/General/Flecha_Negra_Abajo.svg")
+  background-repeat: no-repeat
+
+::-webkit-scrollbar-button:decrement
+  background: url("../../../assets/General/Flecha_Negra_Arriba.svg")
+  background-repeat: no-repeat
+
+/* Handle */
+::-webkit-scrollbar-thumb 
+  background: rgba(0,0,0,0.7)
+  height: 20px
+  width: 20px
   
   
