--- a/src/app/comun/desarrollador/desarrollador.component.html
+++ b/src/app/comun/desarrollador/desarrollador.component.html
@@ -138,7 +138,8 @@
       <img class="iconoEliminar" src="assets/desarrollador/papelera.svg" (click)="desarrolladorService.eliminarMazmorra()">
       <img class="iconoGuardar" src="assets/desarrollador/guardar.png" (click)="desarrolladorService.guardarMazmorra()">
       <img class="iconoCerrar" src="assets/desarrollador/cerrar.png" (click)="desarrolladorService.cerrarMazmorra()">
-    
+      
+      <!-- Contenedor Reticula -->
       <div class="contenedorReticula">
         <div *ngFor="let visorFila of desarrolladorService.visorFila; let i = index" class="filaReticula" [style.height]="desarrolladorService.renderAltoSector()">
           <div *ngIf="i>=desarrolladorService.limiteReticulaYMin && i<=desarrolladorService.limiteReticulaYMax || !desarrolladorService.activarLimiteReticula">
@@ -158,6 +159,7 @@
         </div>
       </div>
 
+      <!-- Contenedor Parametros -->
       <div *ngIf="desarrolladorService.estadoMazmorra=='parametros'" class="contenedorPanelParametros">
         <div class="toolbar">
           <div class="boton" (click)="desarrolladorService.seleccionarPanelParametros('General')">GENERAL</div>
@@ -169,6 +171,8 @@
        
         <div class="contenidoParametros">
           
+          <!-- Contenedor Parametros General -->
+
           <form *ngIf="desarrolladorService.estadoParametros=='General'" class="formularioGeneral" [formGroup]="formGeneral">
             <div class="columna">
               <mat-form-field appearance="legacy" class="campoFormulario">
@@ -210,17 +214,56 @@
             </div>
           </form>
 
-          <form *ngIf="desarrolladorService.estadoParametros=='Salas'" class="formularioGeneral" [formGroup]="formGeneral">
-            SALAS
-            <hr>
-            Num_Sala
-            Nombre
-            Descripcion
-            Num_Enemigos
-            Num_Eventos
-            Num-Eventos
-            Evento_Inicial_ID
-            Evento_Final_ID
+          <!-- FORMULARIO DE SALAS -->
+
+          <form *ngIf="desarrolladorService.estadoParametros=='Salas'" class="formularioSalas" [formGroup]="formSala">
+            
+            <div class="panelSalas">
+              <div class="titulo"> Salas </div>
+              <div class="contenedorSalas">
+                <div *ngFor="let sala of desarrolladorService.mazmorra.salas; let index=i" class="sala" (click)=desarrolladorService.seleccionarSala(sala.sala_id)>{{sala.nombre}}</div>
+              </div>
+              <div class="botonAddSala" (click)="desarrolladorService.crearSala()">Añadir Sala</div>
+            </div>
+
+            <div class="contenedorFormularioSala seleccioneSala" *ngIf="desarrolladorService.salaSeleccionadaId==0"> <--- Selecciona una sala</div>
+
+            <div class="contenedorFormularioSala" *ngIf="desarrolladorService.salaSeleccionadaId!=0">
+              <div class="columna">
+                <mat-form-field appearance="legacy" class="campoFormulario">
+                  <mat-label>Sala ID</mat-label>
+                  <input matInput type="number" placeholder="0" formControlName="sala_id" min="0">
+                </mat-form-field>
+
+                <mat-form-field appearance="legacy" class="campoFormulario">
+                  <mat-label>Nombre</mat-label>
+                  <input matInput placeholder="Nombre" formControlName="nombre">
+                </mat-form-field>
+
+                <mat-form-field appearance="legacy" class="campoFormulario descripcion">
+                  <mat-label>Descripción</mat-label>
+                  <textarea matInput placeholder="Descripcion" formControlName="descripcion"></textarea>
+                </mat-form-field>
+              </div>
+
+              <!-- Num_Enemigos
+                   Num_Eventos
+                   Num-Eventos -->
+
+              <div class="columna">
+                <mat-form-field appearance="legacy" class="campoFormulario">
+                  <mat-label>Evento Inicial ID</mat-label>
+                  <input matInput type="number" placeholder="0" formControlName="evento_inicial_id" min="0">
+                </mat-form-field>
+
+                <mat-form-field appearance="legacy" class="campoFormulario">
+                  <mat-label>Evento Final ID</mat-label>
+                  <input matInput type="number" placeholder="0" formControlName="evento_final_id" min="0">
+                </mat-form-field>
+              </div>
+
+            </div>
+
           </form>
 
           <form *ngIf="desarrolladorService.estadoParametros=='Enemigos'" class="formularioGeneral" [formGroup]="formGeneral">
